# internal/domain/project/entity.go
@@ -1,18 +1,15 @@
 package project
 
 import (
-	"errors"
-)
-
-var (
-	ErrorNotFound = errors.New("error not found")
+	"github.com/google/uuid"
+	"time"
 )
 
 type Entity struct {
-	ID          string `db:"id" bson:"_id"`
-	Title       string `db:"title" bson:"title"`
-	Description string `db:"description" bson:"description"`
-	ManagerID   string `db:"manager_id" bson:"manager_id"`
-	StartDate   string `db:"start_date" bson:"start_date"`
-	EndDate     string `db:"end_date" bson:"end_date"`
+	ID          string    `db:"id" bson:"_id"`
+	Title       string    `db:"title" bson:"title"`
+	Description string    `db:"description" bson:"description"`
+	StartDate   time.Time `db:"start_date" bson:"start_date"`
+	EndDate     time.Time `db:"end_date" bson:"end_date"`
+	ManagerID   uuid.UUID `db:"manager_id" bson:"manager_id"`
 }
